Remove use of deprecated constructors in java 9
new Integer -> Integer.valueOf()
Class.forName().newInstance() -> getDeclaredConstructor().newInstance