@@ -1,12 +1,12 @@
 /*
  * Copyright 2015 Adaptris Ltd.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *     http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -23,10 +23,8 @@ import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import com.adaptris.security.exc.AdaptrisSecurityException;
 import com.adaptris.security.exc.KeystoreException;
 import com.adaptris.security.util.Constants;
@@ -103,7 +101,8 @@ public abstract class KeystoreFactory {
       if (System.getProperties().containsKey(KEYSTORE_FACTORY_CLASS)) {
         String cls = System.getProperty(KEYSTORE_FACTORY_CLASS);
         try {
-          defaultFactory = (KeystoreFactory) Class.forName(cls).newInstance();
+          defaultFactory =
+              (KeystoreFactory) Class.forName(cls).getDeclaredConstructor().newInstance();
         }
         catch (Exception e) {
           logR.warn("Failed to create custom keystore factory " + cls
@@ -260,7 +259,7 @@ public abstract class KeystoreFactory {
       }
       else {
         try {
-          kp = (KeystoreProxy) clazz.newInstance();
+          kp = (KeystoreProxy) clazz.getDeclaredConstructor().newInstance();
           kp.setKeystoreLocation(ksl);
         }
         catch (Exception e) {
